# jobfinder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  take-cropped.mjs  take-screenshots.mjs  workday-launch.mjs
.claude/agents/: backend-dev.md  docs-specialist.md  extension-dev.md  frontend-dev.md  product-director.md  uiux-specialist.md
.github/workflows/: ci.yml
app/: ai_client.py  browser_pool.py  career_advisor.py  config.py  cover_letter.py  database.py  emailer.py  follow_up.py  main.py  matcher.py  pdf_generator.py  predictor.py  rate_limiter.py  resume_analyzer.py  salary_estimator.py  scheduler.py  tailoring.py
app/routers/: alerts.py  analytics.py  autofill.py  jobs.py  queue.py  scraping.py  settings.py  tailoring.py
app/scrapers/: __init__.py  adzuna.py  arbeitnow.py  base.py  builtin.py  dice.py  greenhouse.py  hackernews.py  himalayas.py  indeed.py  jobicy.py  linkedin.py  remoteok.py  remotive.py  usajobs.py  wellfound.py  weworkremotely.py
app/static/: index.html
app/static/css/: style.css
docs/plans/: 2026-03-11-autofill-extension-design.md
extension/: ats-adapters.js  background.js  content.js  manifest.json  package.json  pnpm-lock.yaml  popup.css  popup.html  popup.js  styles.css
extension/tests/: background.test.js  content.test.js  helpers.js  popup.test.js  setup.js
tests/: test_ai_client.py  test_ai_settings.py  test_api.py  test_apply.py  test_config.py  test_database.py  test_emailer.py  test_matcher.py  test_profile_extended.py  test_rate_limiter.py  test_resume_analyzer.py  test_scheduler.py  test_search_config.py  test_tailoring.py
(+25 files in other folders)
